kubernetes/ufoo/10-tech/drone/ingress.yaml
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: concourse-http
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`drone.agrrh.com`) || Host(`drone.5426b488.nip.io`)
      # middlewares:
      #   - name: whitelist
      #     namespace: traefik
      services:
        - kind: Service
          name: drone-server
          namespace: drone
          port: 8080
